--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,9 @@
-fastapi==0.110.0
-uvicorn[standard]==0.29.0
+Django==5.1.2
+channels==4.1.0
+daphne==4.1.2
+dj-database-url==2.2.0
+psycopg-binary==3.2.10
+python-dotenv==1.1.1
+pgvector==0.4.1
+djangorestframework==3.16.1
+psycopg2-binary==2.9.11
