add models in project

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,11 +2,16 @@ FROM node:20-alpine AS base
 
 WORKDIR /app
 
-COPY package.json ./
-RUN npm install
+# Копируем package.json и package-lock.json
+COPY package*.json ./
+RUN npm ci --only=production
 
+# Копируем исходный код
 COPY . .
+
+# Собираем приложение
+RUN npm run build
 
 EXPOSE 3000
 
-CMD ["npm", "run", "dev"]
+CMD ["npm", "start"]
