--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ DATABASE_URL=postgresql://postgres:postgres@db:5432/postgres
 DJANGO_SECRET_KEY=change-me
 DJANGO_DEBUG=false
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+OPENAI_API_KEY=sk-proj-secret-key
 
 # Frontend service
 NEXT_PUBLIC_API_URL=http://localhost:8000
