--- a/backend/fixtures/carts.yaml
+++ b/backend/fixtures/carts.yaml
@@ -4,6 +4,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440001
     person: 11111111-1111-1111-1111-111111111001
+    table_number: 1
     created_at: "2024-09-18T08:00:00Z"
     updated_at: "2024-09-18T09:00:00Z"
 
@@ -13,6 +14,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440001
     person: 11111111-1111-1111-1111-111111111002
+    table_number: 2
     created_at: "2024-09-19T08:15:00Z"
     updated_at: "2024-09-19T08:45:00Z"
 
@@ -22,6 +24,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440001
     person: 11111111-1111-1111-1111-111111111003
+    table_number: 3
     created_at: "2024-09-20T09:00:00Z"
     updated_at: "2024-09-20T09:30:00Z"
 
@@ -31,6 +34,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440001
     person: 11111111-1111-1111-1111-111111111004
+    table_number: 4
     created_at: "2024-09-21T09:10:00Z"
     updated_at: "2024-09-21T09:40:00Z"
 
@@ -40,6 +44,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440001
     person: 11111111-1111-1111-1111-111111111005
+    table_number: 5
     created_at: "2024-09-22T10:00:00Z"
     updated_at: "2024-09-22T10:30:00Z"
 
@@ -49,6 +54,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440001
     person: 11111111-1111-1111-1111-111111111006
+    table_number: 6
     created_at: "2024-09-23T11:00:00Z"
     updated_at: "2024-09-23T11:20:00Z"
 
@@ -58,6 +64,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440001
     person: 11111111-1111-1111-1111-111111111007
+    table_number: 7
     created_at: "2024-09-24T11:30:00Z"
     updated_at: "2024-09-24T12:00:00Z"
 
@@ -67,6 +74,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440001
     person: 11111111-1111-1111-1111-111111111008
+    table_number: 8
     created_at: "2024-09-25T12:10:00Z"
     updated_at: "2024-09-25T12:30:00Z"
 
@@ -76,6 +84,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440001
     person: 11111111-1111-1111-1111-111111111009
+    table_number: 9
     created_at: "2024-09-26T12:45:00Z"
     updated_at: "2024-09-26T13:00:00Z"
 
@@ -85,6 +94,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440001
     person: 11111111-1111-1111-1111-111111111010
+    table_number: 10
     created_at: "2024-09-27T13:30:00Z"
     updated_at: "2024-09-27T14:00:00Z"
 
@@ -94,6 +104,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440001
     person: 11111111-1111-1111-1111-111111111011
+    table_number: 11
     created_at: "2024-10-01T08:00:00Z"
     updated_at: "2024-10-01T09:00:00Z"
 
@@ -103,6 +114,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440001
     person: 11111111-1111-1111-1111-111111111012
+    table_number: 12
     created_at: "2024-10-02T09:15:00Z"
     updated_at: "2024-10-02T10:00:00Z"
 
@@ -112,6 +124,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440002
     person: 11111111-1111-1111-1111-111111111013
+    table_number: 13
     created_at: "2024-10-03T10:30:00Z"
     updated_at: "2024-10-03T11:15:00Z"
 
@@ -121,6 +134,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440001
     person: 11111111-1111-1111-1111-111111111014
+    table_number: 14
     created_at: "2024-10-04T11:45:00Z"
     updated_at: "2024-10-04T12:30:00Z"
 
@@ -130,6 +144,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440002
     person: 11111111-1111-1111-1111-111111111015
+    table_number: 15
     created_at: "2024-10-05T13:00:00Z"
     updated_at: "2024-10-05T13:45:00Z"
 
@@ -139,6 +154,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440001
     person: 11111111-1111-1111-1111-111111111016
+    table_number: 16
     created_at: "2024-10-06T14:15:00Z"
     updated_at: "2024-10-06T15:00:00Z"
 
@@ -148,6 +164,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440002
     person: 11111111-1111-1111-1111-111111111017
+    table_number: 17
     created_at: "2024-10-07T15:30:00Z"
     updated_at: "2024-10-07T16:15:00Z"
 
@@ -157,6 +174,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440001
     person: 11111111-1111-1111-1111-111111111018
+    table_number: 18
     created_at: "2024-10-08T16:45:00Z"
     updated_at: "2024-10-08T17:30:00Z"
 
@@ -166,6 +184,7 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440002
     person: 11111111-1111-1111-1111-111111111019
+    table_number: 19
     created_at: "2024-10-09T18:00:00Z"
     updated_at: "2024-10-09T18:45:00Z"
 
@@ -175,5 +194,6 @@
   fields:
     organization: 550e8400-e29b-41d4-a716-446655440001
     person: 11111111-1111-1111-1111-111111111020
+    table_number: 20
     created_at: "2024-10-10T19:15:00Z"
     updated_at: "2024-10-10T20:00:00Z"
